2013-03-25  Kent Tamura  <tkent@chromium.org>

        Rename ENABLE_INPUT_TYPE_DATETIME
        https://bugs.webkit.org/show_bug.cgi?id=113254

        Reviewed by Kentaro Hara.

        Rename ENABLE_INPUT_TYPE_DATETIME to ENABLE_INPUT_TYPE_DATETIME_INCOMPLETE.
        Actually I'd like to remove the code, but we shouldn't remove it yet
        because we shipped products with it on some platforms.

        * Scripts/webkitperl/FeatureList.pm:
        * qmake/mkspecs/features/features.pri:

2013-03-25  Ryosuke Niwa  <rniwa@webkit.org>

        Remove one more line that was intended to be removed in r146657.

        * Scripts/webkitpy/layout_tests/models/test_run_results.py:
        (summarize_results):

2013-03-25  Roger Fong  <roger_fong@apple.com>

        No longer run bindings tests on WinEWS bots which are causing hangs on the bots.
        Re-enable WinEWS tests.

        * Scripts/webkitpy/common/config/ports.py:
        (WinPort.run_bindings_tests_command):
        * Scripts/webkitpy/tool/commands/earlywarningsystem.py:
        (WinEWS):

2013-03-25  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r146793.
        http://trac.webkit.org/changeset/146793
        https://bugs.webkit.org/show_bug.cgi?id=113248

        Fix did not work (Requested by rfong on #webkit).

        * Scripts/webkitpy/tool/commands/earlywarningsystem.py:
        (WinEWS):

2013-03-25  Ryosuke Niwa  <rniwa@webkit.org>

        REGRESSION(r146657): Test failures reported incorrectly
        https://bugs.webkit.org/show_bug.cgi?id=113223

        Reviewed by Dirk Pranke.

        The bug was caused by BuildBotPrinter not taking the new behavior into account.

        Fixed the bug by exposing enabled_pixel_tests_in_retry flag via ResultDetails object and have BuildBotPrinter
        treat ['TEXT', 'IMAGE+TEXT'] as a regular failure when the flag is set true.

        * Scripts/webkitpy/layout_tests/controllers/manager.py:
        (Manager.run):
