@@ -1,3 +1,14 @@
+2013-03-25  Ryosuke Niwa  <rniwa@webkit.org>
+
+        Remove Lion leaks builder
+        https://bugs.webkit.org/show_bug.cgi?id=113252
+
+        Reviewed by Andreas Kling.
+
+        Removed.
+
+        * BuildSlaveSupport/build.webkit.org-config/config.json:
+
 2013-03-25  Kent Tamura  <tkent@chromium.org>
 
         Rename ENABLE_INPUT_TYPE_DATETIME
